--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li><strong>Laurea Triennale</strong> - Università degli Studi di Milano</li>
   </ul>
   <hr size="1" noshade />
+  <h3>Esperienze lavorative</h3>
   <table>
     <tr>
       <td><strong>2016 - Oggi</strong></td>
